[package]
name = "cargo-travis"
version = "0.0.9"
authors = ["roblabla <robinlambertz+dev@gmail.com>"]
description = "Run coverage, upload docs, and more on travis."
license = "MIT"

repository = "https://github.com/roblabla/cargo-travis"
readme = "README.md"

keywords = ["cargo", "cargo-subcommand", "travis", "coverage", "coveralls"]


[dependencies]
badge = "0.2"
cargo = "0.22"
env_logger = "0.4"
fs_extra = "1.1"
log = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.33"

# Temporary band-aid
docopt = "=0.8.1"
