[package]
name = "cargo-travis"
version = "0.0.10"
authors = ["roblabla <robinlambertz+dev@gmail.com>"]
description = "Run coverage, upload docs, and more on travis."
license = "MIT"

repository = "https://github.com/roblabla/cargo-travis"
readme = "README.md"

keywords = ["cargo", "cargo-subcommand", "travis", "coverage", "coveralls"]


[dependencies]
badge = "0.2.0"
cargo = "0.35.0"
docopt = "1.1.0"
env_logger = "0.6.1"
failure = "0.1.5"
fs_extra = "1.1.0"
log = "0.4.6"
serde = "1.0.90"
serde_derive = "1.0.90"
serde_json = "1.0.39"
