[package]
name = "cargo-travis"
version = "0.0.11"
authors = ["roblabla <robinlambertz+dev@gmail.com>"]
description = "Run coverage, upload docs, and more on travis."
license = "MIT"

repository = "https://github.com/roblabla/cargo-travis"
readme = "README.md"

keywords = ["cargo", "cargo-subcommand", "travis", "coverage", "coveralls"]


[dependencies]
badge = "0.2"
cargo = "0.32"
docopt = "1.0"
env_logger = "0.4"
failure = "0.1"
fs_extra = "1.1"
log = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0.33"
